# brucebetheadquarters-3000-

./: .dockerignore  .env.example  .gitignore  BOT_SPEC.md  DATA_SOURCES.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
brucebet/: __init__.py  analytics.py  cli.py  odds_api.py  pl_fixtures.py  scoring.py  service_messages.py  snapshot.py  sources.py  storage.py  telegram_app.py  variable_sync.py  vk_parser.py
configs/: epl_2026_27.json  epl_template.json  world_cup_2026.json
data/: README.md
examples/: absences.csv  match_assessments.csv  match_contexts.csv  match_odds.csv  matches.csv  participants.csv  player_statuses.csv  predictions.csv  team_form.csv  team_match_factors.csv  teams.csv
scripts/: autocommit-snapshot.sh
tests/: test_epl_headquarters.py  test_odds_api.py  test_pl_fixtures.py  test_scoring.py  test_service_messages.py  test_snapshot.py  test_sources.py  test_variable_sync.py
