[project]
name = "brucebet-3000"
version = "0.1.0"
description = "Contest intelligence toolkit for football score prediction pools."
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot[job-queue]>=21,<23"
]

[tool.setuptools]
packages = ["brucebet"]

[project.scripts]
brucebet = "brucebet.cli:main"
brucebet-telegram = "brucebet.telegram_app:main"
